--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,12 @@
   <body>
     <%= render 'layouts/navbar' %>
     <div class="container">
+      <% if notice %>
+        <p class="notice bg-success text-white"><%= notice %></p>
+      <% end %>
+      <% if alert %>
+      <p class="alert bg-warning text-white"><%= alert %></p>
+      <% end %>
       <%= yield %>
     </div>
   </body>
