--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,8 +3,9 @@
 <% if current_user %>
     <%= current_user.name %>
     <%= current_user.email %>
-    <div class="container ">
-        <%= image_tag current_user.avatar, class: "img-fluid rounded-circle" %>
-    </div> 
-
+    <% if current_user.avatar? %>
+        <div class="container ">
+            <%= image_tag current_user.avatar, class: "img-fluid rounded-circle" %>
+        </div> 
+    <% end %>
 <% end %>
