--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,7 +10,7 @@
                         <%#= link_to 'Usuarios para seguir ', users_index_path %>
                     <%# </li> %>
                     <li class="nav-item  px-3 font-weight-bold">
-                        <%#= link_to 'vista de like', posts_path(@post[:id]) %>
+                        <%#= link_to 'editar perfil', edit_user_sessions_path(current_user) %>
                     </li> 
                     <li class="nav-item px-3 font-weight-bold">
                         <%= link_to 'Cerrar sesion ', destroy_user_session_path, method: :delete %>
