--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<h2>Edit user ajax</h2>
+<h2>Edita tus datos</h2>
 
 <%= form_with(model: @user, remote: true) do |f| %>
     <% if @user.errors.any? %>
@@ -21,9 +21,21 @@
         <%= f.text_field :email, class: 'form-group' %>
     </div>
 
+    <div class="form-group">
+        <%= f.label :avatar %><br />
+        <%= f.text_field :avatar, autofocus: true, placeholder: "Url de tu avatar" %>
+    </div>
+
     
-    <div id="create-button" class = 'actions'>
+    <div id="update-user-button" class = 'actions btn-succes my-3'>
         <%= f.submit %>
     </div>
+
 <% end %>
 <br>
+
+
+<h3>¿Eliminar mi cuenta?</h3>
+
+<p><%= button_to "Cancel my account", users_path, data: { confirm: "Are you sure?" }, method: :delete %></p>
+
