--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,7 @@
     <%# end %>
 <% end %>
 
-<%= image_tag current_user.images, class: "img-fluid rounded-circle" if @user.images.attached? %>
+<%#= image_tag current_user.images, class: "img-fluid rounded-circle" if @user.images.attached? %>
 
 <% if current_user %>
     <h2>Tus datos</h2>
