--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,10 +7,17 @@
         <%= image_tag current_user.avatar, class: "img-fluid rounded-circle" %>
     </div> 
 <br>
+<% end %>
 <div id="edit-perfil-button">
     <%= link_to "edita tu perfil", edit_user_path(current_user), class: "btn btn-success", remote: true  %>
 </div>
+<div id="edit-user-form"></div>
+
+<br>
+<h1>Tus Publicaciones</h1>
+<% @posts.each do |post| %>
+    <h3><%= post.title %></h3>
+    <%= post.content %>
 <% end %>
 
 
-<div id="edit-user-form"></div>
