--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,29 +9,5 @@
 <%#= image_tag current_user.images, class: "img-fluid rounded-circle" if @user.images.attached? %>
 
 <% if current_user %>
-    <div class="row">
-        <% @posts.each do |p| %>
-            <div class="card card-group col-md-4 px-3 mt-5 pt5">
-                <div class="card-body">
-                    <h5 class="card-title"><%= p.title %></h5>
-                    <p>te juro que es una foto</p>
-                    <% if current_user == 0 %>
-                    
-                    <div class="container ">
-                        <%= image_tag p.food_store_id.to_, class: "img-fluid rounded-circle" %>
-                    </div> 
-                    <% end %>
-                    <p>rating: <%= rating_for p, 'rating' %></p>
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><%= p.user.name %></li>
-                    <li class="list-group-item"><p class="card-text"><%= p.content %></p></li>
-                </ul>
-                <div class="card-body">
-                    <a href="#" class="card-link">Category: <%= p.category.title %></a>
-                    <a href="#" class="card-link"><%= p.food_store.name %></a>
-                </div>
-            </div>
-        <% end %>
-    </div>
+    <%= render 'posts/posts' %>
 <% end %>
