--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,38 +1,38 @@
-<h2>Sign up</h2>
+<h2>Registrate</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="form-group">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.label :email, "Correo" %><br />
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-group' %>
   </div>
 
   <div class="form-group">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
+    <%= f.label :name, "Nombre" %><br />
+    <%= f.text_field :name, autofocus: true, autocomplete: "name", class: 'form-group' %>
   </div>
 
   <div class="form-group">
-    <%= f.label :images %><br />
-    <%= f.file_field :images, autofocus: true %>
+    <%= f.label :images, "Tu Foto" %><br />
+    <%= f.file_field :images, autofocus: true, class: 'form-group' %>
   </div>
 
   <div class="form-group">
-    <%= f.label :password %>
+    <%= f.label :password, " Contraseña" %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <em>(<%= @minimum_password_length %> Caracteres minimo)</em>
     <% end %><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
 
   <div class="form-group">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :password_confirmation, "Confirma la contraseña" %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up",  class: "btn btn-primary my-3" %>
+    <%= f.submit "Registrate",  class: "btn btn-primary my-3" %>
   </div>
 <% end %>
 
