solucion de fotos de perfil en s3

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,9 +2,9 @@
 
 
 <h2><%= current_user.name %></h2>
-<% if current_user.avatar? %>
+<% if current_user.images %>
     <div class="container ">
-        <%= image_tag current_user.avatar, class: "img-fluid rounded-circle" %>
+        <%= image_tag current_user.images.variant(resize: "300x300"), class: "img-fluid rounded-circle" %>
     </div> 
 <br>
 <% end %>
