--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -36,5 +36,5 @@
 
 <h3>¿Eliminar mi cuenta?</h3>
 
-<p><%= button_to "Eliminar mi cuenta", users_path, data: { confirm: "Are you sure?" }, class: "btn btn-danger", method: :delete %></p>
+<p><%= button_to "Eliminar mi cuenta", users_path, data: { confirm: "¿Estas seguro?" }, class: "btn btn-danger", method: :delete %></p>
 
