--- a/app/views/food_stores/_form.html.erb
+++ b/app/views/food_stores/_form.html.erb
@@ -12,18 +12,13 @@
     <% end %>
 
     <div class="form-group">
-        <%= f.label :name %>
+        <%= f.label :name, "Nombre" %>
         <%= f.text_field :name, class: 'form-group' %>
     </div>
 
      <div class="form-group">
-        <%= f.label :latitude, "latitude" %>
-        <%= f.text_field :latitude, class: 'form-group' %>
-    </div>
-
-    <div class="form-group">
-        <%= f.label :longitude, "longitude" %>
-        <%= f.text_field :longitude, class: 'form-group' %>
+        <%= f.label :address, "Dirección" %>
+        <%= f.text_field :address, class: 'form-group' %>
     </div>
 
     <div class="form-group">
