--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -9,13 +9,12 @@
         <div class="card card-group col-md-4 px-3 mt-5 pt5 bg-light">
             <div class="card-body">
                 <h5 class="card-title"><%= p.title %></h5>
-                <p>te juro que es una foto</p>
-                <% if current_user == 0 %>
-                
-                <div class="container ">
-                    <%= image_tag p.food_store_id.to_, class: "img-fluid rounded-circle" %>
-                </div> 
-                <% end %>
+                <p>Dirección: <%= p.food_store.address %></p>
+                <% p.food_store.photographics.each do |photo| %>
+                    <% if photo != [] %>
+                        <p><%= image_tag photo.variant(resize: "300x300"), class: "img-fluid rounded-circle" %></p>
+                    <% end %>
+                <% end %> 
                 <p>rating: <%= rating_for p, 'rating' %></p>
             </div>
             <div class="container">
