se agregan comentarios a cada post

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,9 @@
   </head>
 
   <body>
-    <%= render 'layouts/navbar' %>
+    <div class="container">
+      <%= render 'layouts/navbar' %>
+    </div>
     <div class="container ">
       <% if notice %>
         <p class="notice bg-success text-white"><%= notice %></p>
