--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,5 +7,8 @@
 <p>Colabora para destacar a locales pequeños o poco conocidos y llevarte la oportunidad de comer algo muy cercano a tu casa o incluso categorias que no sabias que vendian en tu barrio</p>
 
 <% if current_user %>
+    <div class="container text-center py-3">
+        <%= link_to "Crear Locales", food_stores_path, class: "btn btn-primary p-3" %>
+    </div> 
     <%= render 'posts/posts' %>
 <% end %>
