--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,9 +1,9 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Registro", new_session_path(resource_name), class: "text-light" %><br />
+  <%= link_to "¿ya estas Registrado?", new_session_path(resource_name), class: "text-light" %><br />
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Ingreso", new_registration_path(resource_name), class: "text-light" %><br />
+  <%= link_to "Registrate", new_registration_path(resource_name), class: "text-light" %><br />
 <% end %>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
