--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 
 
 <h2><%= current_user.name %></h2>
-<% if current_user.images %>
+<% if current_user.image? %>
     <div class="container ">
         <%= image_tag current_user.images.variant(resize: "300x300"), class: "img-fluid rounded-circle" %>
     </div> 
