--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,6 +12,9 @@
                     <li class="nav-item px-3 font-weight-bold">
                         <%= link_to 'Inicio ', root_path %>
                     </li>
+                    <li class="nav-item px-3 font-weight-bold">
+                        <%= link_to 'Destacados ', posts_path %>
+                    </li>
                     <li class="nav-item  px-3 font-weight-bold">
                         <%= link_to 'Tu Perfil', users_path(current_user) %>
                     </li> 
