--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,6 +17,11 @@
  @import "bootstrap";
 
  * body {
-    background-color: teal;
-    //color: white;
+    background-color: #DA6D5A;
+    color: #313535;
+  }
+
+  .btn {
+    color: #f3f3f3;
+    background-color: #313535;
   }
