--- a/app/views/food_stores/index.html.erb
+++ b/app/views/food_stores/index.html.erb
@@ -1,41 +1,3 @@
-<div class="container py-3">
-    <div id="food-store-form"></div>
-</div>
-<div id="food-store-button">
-    <%= link_to "Crea un Nuevo local", new_food_store_path, class: "btn btn-success", remote: true %>
+<div>
+    <%= link_to "Pagina principal", root_path, class: "btn btn-success" %>
 </div> 
-
-
-
-
-<div class="row">
-    <% @food_stores.each do |food_store| %>
-        <div class="card card-group col-md-4 px-3 mt-5 pt5 bg-light">
-            <div class="card-body">
-                <h5 class="card-title"><%= food_store.name %></h5>
-                    <% food_store.photographics.each do |photo| %>
-                        <% if photo != [] %>
-                            <p><%= image_tag photo.variant(resize: "300x300"), class: "img-fluid rounded-circle" %></p>
-                        <% end %>
-                    <% end %>
-            </div>
-            <div class="container">
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><%= food_store.address %></li>
-                    <li class="list-group-item"><%= food_store.day_open %></li>
-                    <% if food_store.schedule %>
-                        <li class="list-group-item">Apertura: <%= food_store.schedule.strftime("%H:%M") %></li>
-                    <% end %>
-                    <% if food_store.closing %>
-                        <li class="list-group-item">Cierre: <%= food_store.closing.strftime("%H:%M") %></li>
-                    <% end %>
-                </ul>
-                <div class="container text-center py-3">
-                    <%= link_to "Mostrar", food_store_path(food_store.id), class: "btn btn-success" %>
-                </div> 
-            </div>
-            
-        </div>
-        
-    <% end %>
-</div>
