--- a/app/views/food_stores/show.html.erb
+++ b/app/views/food_stores/show.html.erb
@@ -4,6 +4,9 @@
         <div class="card card-group col-md-4 px-3 mt-5 pt5 bg-light">
             <div class="card-body">
                 <h5 class="card-title"><%= @food_store.name %></h5>
+                <% if @food_store.photo %>
+                    <p><%= image_tag @food_store.photo, class: "img-fluid rounded-circle" %></p>
+                <% end %>
                     <% @food_store.photographics.each do |photo| %>
                         <% if photo != [] %>
                             <p><%= image_tag photo.variant(resize: "300x300"), class: "img-fluid rounded-circle" %></p>
@@ -13,7 +16,6 @@
             <div class="container my-2">
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item"><%= @food_store.address %></li>
-                    <li class="list-group-item"><%= @food_store.day_open %></li>
                     <% if @food_store.schedule %>
                         <li class="list-group-item">Apertura: <%= @food_store.schedule.strftime("%H:%M") %></li>
                     <% end %>
@@ -26,5 +28,5 @@
 </div>
 
 <div class="container text-center py-3">
-    <%= link_to "volver", food_stores_path, class: "btn btn-success" %>
+    <%= link_to "volver", root_path, class: "btn btn-success" %>
 </div> 
