--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,7 +3,7 @@
         <div>
             <%= form_with(url: root_path, method: :get, local: :true, class: 'form-inline my-2 my-lg-0') do %>
                 <%= text_field_tag :q, "", class: 'form-control mr-sm-2' %>
-                <%= submit_tag 'buscar', class: 'btn btn-outline-success my-2 my-sm-0' %>
+                <%= submit_tag 'Buscar', class: 'btn btn-outline-success my-2 my-sm-0' %>
             <% end %>
         </div>
         <div class="collapse navbar-collapse" id="navbarNav"> <!--oculta en pantalla pequeña-->
