--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -20,7 +20,8 @@
 
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
-    <%#= link_to "Inicia sesion con #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), method: :post, class:'btn btn-success my-2' %><br />
-    <%= link_to "Inicia sesion con google", 'auth_google_oauth2_path', class:'btn btn-success my-2' %><br />
+    <%#= link_to "Inicia sesion con Google", omniauth_authorize_path(resource_name, provider), method: :post, class:'btn btn-success my-2' %>
+    <%#= link_to "Inicia sesion con google", user_google_oauth2_omniauth_authorize_path, method: :post, class:'btn btn-success my-2' %>
+    <%= link_to "Inicia sesion con google", user_google_oauth2_omniauth_authorize_path, class:'btn btn-success my-2' %><br />
   <% end %>
 <% end %>
