--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,4 +8,6 @@
 
 <% if current_user %>
     <%= render 'food_stores/food_stores' %>
+<% else %>
+    <h3>Para Participar Debes Registrarte con tu Correo</h3>
 <% end %>
