--- a/app/views/food_stores/show.html.erb
+++ b/app/views/food_stores/show.html.erb
@@ -1,7 +1,7 @@
 <h5 class="text-center">Local</h5>
 
-<div class="row">
-        <div class="card card-group col-md-4 px-3 mt-5 pt5 bg-light">
+<div class="row text-center">
+        <div class="card card-group col-md-12 px-3 mt-5 pt5 bg-light">
             <div class="card-body">
                 <h5 class="card-title"><%= @food_store.name %></h5>
                 <% if @food_store.photo %>
