se agrega la ruta de donations

--- a/app/views/donations/show.html.erb
+++ b/app/views/donations/show.html.erb
@@ -6,4 +6,4 @@
   <%= @svg.html_safe %>
 </p>
 
-<%= link_to 'pago realizado', check_donation_path(@donation.id) %>
+<%= link_to 'Pago Realizado', check_donation_path(@donation.id), class: "btn btn-primary" %>
