--- a/app/views/donations/_form.html.erb
+++ b/app/views/donations/_form.html.erb
@@ -11,22 +11,22 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :amount %>
-    <%= form.text_field :amount %>
+  <div class="form-group">
+    <%= form.label :amount, 'Monto' %>
+    <%= form.text_field :amount, class: 'form-group' %>
   </div>
 
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
+  <div class="form-group">
+    <%= form.label :title, 'Titulo' %>
+    <%= form.text_field :title, class: 'form-group' %>
   </div>
 
-  <div class="field">
-    <%= form.label :message %>
-    <%= form.text_field :message %>
+  <div class="form-group">
+    <%= form.label :message, 'Mensaje' %>
+    <%= form.text_field :message, class: 'form-group' %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit "Ingresar donación", class: 'btn btn-success' %>
   </div>
 <% end %>
