--- a/app/views/donations/index.html.erb
+++ b/app/views/donations/index.html.erb
@@ -1,15 +1,15 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Donations</h1>
-
+<h1>Donaciones a través de Mach</h1>
+<p>Si quieres ayudar a los creadores para nuevo contenido en el futuro. Puedes hacer tu aporte y añadir tus recomendaciones.</p>
 <table>
   <thead>
     <tr>
-      <th>Amount</th>
-      <th>Title</th>
-      <th>Message</th>
-      <th>Status</th>
-      <th>Code</th>
+      <th>Monto</th>
+      <th>Titulo</th>
+      <th>Mensaje</th>
+      <th>Estado</th>
+      <th>Codigo de pago</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -22,9 +22,7 @@
         <td><%= donation.message %></td>
         <td><%= donation.status %></td>
         <td><%= donation.code %></td>
-        <td><%= link_to 'Show', donation %></td>
-        <td><%= link_to 'Edit', edit_donation_path(donation) %></td>
-        <td><%= link_to 'Destroy', donation, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Mostrar', donation, class: "btn btn-primary" %></td>
       </tr>
     <% end %>
   </tbody>
@@ -32,4 +30,4 @@
 
 <br>
 
-<%= link_to 'New Donation', new_donation_path %>
+<%= link_to 'Realizar una nueva donacion', new_donation_path, class: "btn btn-success" %>
