--- a/app/views/donations/new.html.erb
+++ b/app/views/donations/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', donation: @donation %>
 
-<%= link_to 'Back', donations_path %>
+<%= link_to 'Volver', donations_path, class: "btn btn-success my-3" %>
