--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
+        <a class="navbar-brand" href="https://food94good.herokuapp.com/donations">
+        <%= image_tag 'logo.png', class: "img-fluid rounded-circle imgnavbar" %>
+        Food Good
+        </a>
         <div>
             <%= form_with(url: root_path, method: :get, local: :true, class: 'form-inline my-2 my-lg-0') do %>
                 <%= text_field_tag :q, "", class: 'form-control mr-sm-2' %>
@@ -29,7 +33,7 @@
 
                 <% else %>
                     <li class="nav-item px-3 font-weight-bold">
-                        <%= link_to 'Loguearse ', user_session_path %>
+                        <%= link_to 'Ingresar', user_session_path %>
                     </li>
                     <li class="nav-item  px-3 font-weight-bold">
                         <%= link_to 'Registrarse ', new_user_registration_path %>
