cambios al envio de email

--- a/app/views/donations/index.html.erb
+++ b/app/views/donations/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Donaciones a través de Mach</h1>
-<p>Si quieres ayudar a los creadores para nuevo contenido en el futuro. Puedes hacer tu aporte y añadir tus recomendaciones.</p>
+<p>Si quieres ayudar a los creadores para nuevo contenido en el futuro. Puedes hacer tu aporte creando un codigo QR y añadiendo tus recomendaciones.</p>
 <table>
   <thead>
     <tr>
