--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -6,7 +6,7 @@
   <body>
     <h1>Se creo un nuevo local, <%= @user.email %></h1>
     <p>
-      You have successfully signed up to example.com,
+      You have successfully signed up to Food Good,
       your username is: <%= @user.name %>.<br>
     </p>
     <p>
