--- a/app/views/food_stores/_form.html.erb
+++ b/app/views/food_stores/_form.html.erb
@@ -21,6 +21,11 @@
         <%= f.text_field :address, class: 'form-group' %>
     </div>
 
+         <div class="form-group">
+        <%= f.label :products, "Productos" %>
+        <%= f.text_field :products, class: 'form-group' %>
+    </div>
+
     <div class="form-group">
         <%= f.label :photographics, "Fotos del local" %><br />
         <%= f.file_field :photographics, multiple: true, autofocus: true, class: 'form-group' %>
