--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
       <% if alert %>
       <p class="alert bg-warning text-white"><%= alert %></p>
       <% end %>
-      <div class="container ">
+      <div class="container text-read">
         <%= yield %>
       </div>
     </div>
